CHANGELOG
=========


2020-04-02
----------
### Changelog extractor
* Add parameter `--archive` to specify code archive as argument.

2020-03-30
----------
### Changelog extractor
* Debian conversion: Detect new style author lines and versions with postfixes.

2020-03-15
----------

### Changelog extractor
* Do not consider hidden files (starting with `.`) as potential changelog files in the tarballs.


2020-01-18
----------

### Changelog extractor
* Fix detection of previous version if version only get postfixes (like '2' and '2.1').
* Fix conversion for pymisp: indentation missed one additional space.

2019-11-16
----------

### Changelog extractor
* Add git style support with autodetection


2019-08-09
----------

### Changelog extractor
* More robust changes-file parsing / last version extraction.


2019-08-03
----------

### Changelog extractor
- optionally use previous version from parameter (#4)
- Fix wrong variable name: detection of changelog filenames `debian/changelog` (#5)


2019-07-25
----------

### Changelog extractor
* (Py)MISP support added

### Tests
* Added tests for the misp changelog extractor


2019-07-21
----------

### Changelog extractor
* markdown: add support for shodan style (no ### headings)
* markdown: harmonize headings to ATX-style

### Tests
* Added tests for changelog_extractor, rst conversion

2019-06-30
----------

### Setup
* remove classifier for 3.4, does not build there, not a relevant platform anyway

### Changelog extractor
* Add generic rst conversion, tested with xarray, merged in xonsh
* Add format detection based on filename
* Detect whats-new changelog files
* Handle broken pipe errors gracefully
* Generic markdown conversion
* Finish isort conversion

### Tests
* Added tests for changelog_extractor, rst conversion

2019-06-09
----------

### Tests
* Added for common.conversion.Version

### Common
* conversion.Version:
  * denies text-only versions
  * split also for dashes

### changelog extractor