@@ -2,6 +2,12 @@ CHANGELOG
 =========
 
 
+2021-07-03
+----------
+### Changelog extractor
+* Add support for time-machine logs (rst)
+* Tests: add tests for base
+
 2020-04-02
 ----------
 ### Changelog extractor
